--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"node-sass": "^6.0.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-router-dom": "^5.3.1",
 		"react-scripts": "5.0.0",
 		"react-transition-group": "^4.4.2",
 		"web-vitals": "^2.1.4"
